--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -8,46 +8,7 @@
     tools:context=".ScheduleActivity">
 
     <include layout="@layout/content_map" />
+    <include layout="@layout/bottom_sheet"/>
 
-
-    <LinearLayout
-        android:id="@+id/sheet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/rounded"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_remove_24"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center|top"/>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:id="@+id/fab"
-            android:background="@android:color/holo_red_dark"
-            android:src="@drawable/ic_baseline_add_24"
-            android:layout_gravity="end|bottom"
-            android:layout_margin="16dp"
-            android:layout_height="wrap_content"/>
-
-
-        <RelativeLayout
-            android:background="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </androidx.recyclerview.widget.RecyclerView>
-
-        </RelativeLayout>
-
-    </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
