--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -34,7 +34,6 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
-            android:visibility="gone"
             android:layout_below="@+id/number_of_schedules"
             android:padding="15dp"
             app:cardCornerRadius="5dp"
@@ -57,20 +56,21 @@
                     android:id="@+id/plain_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="12dp"
                     android:layout_toEndOf="@+id/menu_image"
                     android:text="Scheduled Visits"
                     android:textColor="@color/black"
-                    android:textSize="25sp"
-                    android:layout_marginTop="20dp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <ImageView
                     android:id="@+id/calendar_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="12dp"
+                    android:layout_marginStart="57dp"
                     android:layout_toEndOf="@+id/plain_text"
-                    android:layout_marginStart="50dp"
+                    android:padding="12dp"
                     android:src="@drawable/ic_baseline_calendar_today_24" />
 
                 <ImageView
@@ -78,8 +78,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/calendar_image"
+                    android:layout_alignParentEnd="true"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_edit_attributes_24" />
+                    android:src="@drawable/ic_baseline_add_24" />
 
             </RelativeLayout>
 
@@ -87,15 +88,6 @@
         </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:id="@+id/fab"
-        android:background="@android:color/holo_red_dark"
-        android:src="@drawable/ic_baseline_add_24"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        android:layout_height="wrap_content"/>
 
 
     <RelativeLayout
