--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content">
 
             <RelativeLayout
-                android:id="@+id/relative"
+                android:id="@+id/relative_bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
